# docs/api/openapi/Customer.json
@@ -468,8 +468,9 @@
             "type": "string",
             "format": "email"
           },
-          "kafkaTopic": {
+          "phoneNumber": {
             "type": "string",
+            "format": "tel",
             "nullable": true
           },
           "subscribedProviderCollection": {
@@ -690,7 +691,9 @@
           2,
           3,
           4,
-          5
+          5,
+          6,
+          7
         ],
         "type": "integer",
         "format": "int32"
